# collapse-3

./: .gitignore  30SECONDS.md  CITATION.cff  LICENSE  NOTATION.md  NUTSHELL.md  README.md  RELEVANCE.md  conftest.py  llms-full.txt  llms.txt  pyproject.toml  rules.md
collapse3/: __init__.py  agents.py  aliasing.py  enumeration.py  game.py  learning.py  metrics.py  oracle.py  reference_engine.py  render.py  solver.py
docs/: EVALUATION_EQUIVALENCE.md  EVALUATION_EQUIVALENCE_PRIOR_ART.md  FAQ.md  FINDINGS.md  NEURAL_EXHIBIT.md  PERSPECTIVE.md
experiments/: __init__.py  _provenance.py  aliasing_floor.py  best_response.py  depth_sweep.py  elo_tournament.py  evaluation_equivalence.py  frozen_plan_vs_blunder.py  full_game_value.py  horizon.py  info_policy.py  interface_ladder.py  kimi_census.py  kimi_gates.py  masked_floor.py  memory_floor.py  objective_failure.py  oneply_vs_learned.py  opening_values.py  optimal_move_rate.py  representation_amplification.py  sandbagging.py  sixpeg_floor.py  solve_reserves.py  structural_census.py  threepeg_floor.py  threepeg_selfplay.py  weak_exploiter.py  win_rate_vs_regret.py
notes/: PERSPECTIVE.md
probes/: chatgpt_audit.py  chatgpt_train.py  generalization_experiment.py  make_memo44.py  matrix_reconcile.py  stochastic_removal.py
results/: aliasing_floor_latest.json  best_response_latest.json  depth_sweep_latest.json  elo_tournament_latest.json  evaluation_equivalence_latest.json  frozen_plan_vs_blunder_latest.json  full_game_value_latest.json  horizon_latest.json  info_policy_latest.json  interface_ladder_latest.json  matrix.json  (+18 more)
(+31 files in other folders)
