[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "collapse3"
version = "0.2.0"
description = "Exact solver and competence-measurement toolkit for the Collapse3 board game."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["collapse3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
